--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "@types/node": "^14.0.6"
+    "@types/node": "^14.0.6",
+    "fp-ts": "^2.6.6"
   },
   "scripts": {
     "start": "ts-node src/index.ts",
