--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "dependencies": {
     "@types/node": "^14.0.6",
+    "fluture": "^12.3.1",
     "fp-ts": "^2.6.6"
   },
   "scripts": {
