--- a/package.json
+++ b/package.json
@@ -5,21 +5,23 @@
   "dependencies": {},
   "scripts": {
     "start": "ts-node src/index.ts",
-		"start2": "tsc && node src/index.js",
-		"build": "tsc",
-		"test": "mocha tests/index.test.js --exit"
+    "start2": "tsc && node src/index.js",
+    "build": "tsc",
+    "test": "mocha tests/index.test.js --exit",
+    "build-and-test": "yarn build && yarn test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "ts-node": "^8.10.2",
-		"typescript": "^3.9.3",
-		"@types/chai": "^4.2.11",
+    "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/node": "^14.0.6",
     "chai": "^4.2.0",
-    "mocha": "^8.0.1"
+		"mocha": "^8.0.1",
+		"mocha-steps": "^1.3.0",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.3"
   }
 }
