--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fp-autofocus",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "index.js",
   "dependencies": {},
   "scripts": {
@@ -28,6 +28,6 @@
 		"**/**/lodash": "^4.17.19",
 		"**/**/serialize-javascript": "^3.1.0"
 	},
-	"types": "index.d.ts",
+	"types": "src/index.d.ts",
 	"files": ["src/index.ts", "src/index.d.ts"]
 }
