--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "fp-autofocus",
   "version": "1.0.6",
-  "main": "src/index.js",
+  "main": "dist/src/index.js",
   "dependencies": {},
   "scripts": {
     "start": "ts-node src/index.ts",
-    "start2": "tsc && node src/index.js",
+    "start2": "tsc && node dist/src/index.js",
     "start-cla": "tsc && ts-node src/console.ts",
     "build": "tsc",
     "test": "mocha tests/index.test.js --exit",
@@ -34,11 +34,11 @@
     "**/**/lodash": "^4.17.19",
     "**/**/serialize-javascript": "^3.1.0"
   },
-  "types": "src/index.d.ts",
+  "types": "dist/src/index.d.ts",
   "files": [
-    "src/index.js",
+    "dist/src/index.js",
     "src/index.ts",
-    "src/index.d.ts"
+    "dist/src/index.d.ts"
   ],
   "comments": {
     "start-cla": "placeholder script to build entire project & run command line app"
